# tsibabot

./: .gitignore  Cargo.toml  README.md  env.sample  rustfmt.toml
src/: config.rs  lib.rs  main.rs
src/http/: extractor.rs  mod.rs
src/http/routes/: health.rs  hooks.rs  mod.rs
src/types/: ghub.rs  mod.rs
src/types/ghub/: commits.rs  ping_event.rs  push_event.rs  pusher.rs  repo.rs
