[package]
name = "tsiba"
version = "0.1.0"
edition = "2021"

[dependencies]
# Errors
anyhow = "1.0.57"
# Web Framework
axum = "0.5.6"
# HTTP
hyper = { version = "0.14.18", features = ["full"] }
# Util
dotenv = "0.15.0"
env_logger = "0.9.0"
hex = "0.4.3"
# Bot
teloxide = { version = "0.9.0", features = ["full"] }
# Tokio
tokio = { version = "1.18.2", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tower-http = { version = "0.3.3", features = ["trace"] }
# Serde
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
# Crypto
hmac = "0.12.1"
sha2 = "0.10.2"
